--- a/css/style.scss
+++ b/css/style.scss
@@ -19,3 +19,11 @@ hr{
     height:50px;
     line-height:50px;
 }
+body {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
