--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ hr {
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
+     background:pink;
   }
 
 /*# sourceMappingURL=style.css.map */
