--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,32 @@
 h1 {
   color: palevioletred;
-  text-align: center; }
+  text-align: center;
+}
 
 hr {
-  width: 70%; }
+  width: 70%;
+}
 
 .char {
   text-align: center;
-  height: auto; }
+  height: auto;
+}
 
 .footer {
   text-align: center;
   background-color: #ccc;
   height: 50px;
-  line-height: 50px; }
-  body {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-     background:pink;
-  }
+  line-height: 50px;
+}
+
+body {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  background: pink;
+}
 
 /*# sourceMappingURL=style.css.map */
