--- a/buoi1/css/style.css
+++ b/buoi1/css/style.css
@@ -14,10 +14,13 @@ hr {
 
 .footer {
   text-align: center;
-  background-color: #ccc;
-  height: 50px;
-  line-height: 50px;
+  background-color: black;
+  height: 70px;
+  line-height: 70px;
+color:white;
+width: 100%;;
 }
+
 
 body {
   -webkit-touch-callout: none;
@@ -27,6 +30,8 @@ body {
   -o-user-select: none;
   user-select: none;
   background: pink;
+  margin:0;
+   
 }
 
 /*# sourceMappingURL=style.css.map */
