--- a/buoi1/css/style.scss
+++ b/buoi1/css/style.scss
@@ -1,33 +1,34 @@
-
-h1{
-    color:palevioletred;
-    text-align: center;
-   
+h1 {
+  color: palevioletred;
+  text-align: center;
 }
-p{
-    color:white;
+p {
+  color: white;
 }
 
-hr{
-    width:70%;
+hr {
+  width: 70%;
 }
-.char{
-    text-align: center;
-    height:auto;
-   
+.char {
+  text-align: center;
+  height: auto;
 }
-.footer{
-    text-align: center;
-    background-color:#ccc;
-    height:50px;
-    line-height:50px;
+.footer {
+  text-align: center;
+  background-color: #ccc;
+  height: 70px;
+  line-height: 70px;
+  margin:0;
+
+
 }
+  
 body {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-    background:pink;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  background: pink;
 }
