--- a/css/style.scss
+++ b/css/style.scss
@@ -30,5 +30,6 @@ body {
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
-  background: pink;
+  background-image: linear-gradient(115deg, pink, pink, #a767e5, #12bcfe, #44ce7b);
+
 }
