--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 22px;
+    font-weight: lighter;
 }
 
 .menu {
@@ -21,25 +22,41 @@
     width: 140px;
     height: 40px;
     line-height: 40px;
-    background-color: greenyellow;
     position: relative;
-    border: solid 1px red;
+    border: solid 1px #70c2e9;
 }
 
 .menu ul li a {
     text-decoration: none;
-    color: black;
     display: block;
+    color: #70c2e9;
+    border-color: #70c2e9;
+    transition-property: all;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
+    transition-delay: 1s;
+    transition: all 400ms linear 0s;
+}
+
+ul li:hover a {
+    color: white;
+    transition-delay: 0s;
+    transition: all 400ms linear 0s;
+    background: #70c2e9;
 }
 
 .menu ul li:hover {
-    background-color: red;
+    transition-property: all;
+    transition: all 400ms linear 0s;
+    background-color: white;
+    z-index: 10000;
+    transform: translateX(1.5em);
 }
 
 .main-menu .sub-menu {
     position: absolute;
     left: 100%;
-    top: 0;
+    top: 0px;
     display: none;
 }
 
