--- a/buoi5/style.css
+++ b/buoi5/style.css
@@ -20,6 +20,7 @@ body {
 .menu ul {
     list-style-type: none;
     justify-content: center;
+    box-shadow: 20px 20px 50px grey;
 }
 
 .menu ul li {
@@ -54,7 +55,8 @@ ul li:hover a {
     transition: all 400ms linear 0s;
     background-color: #70c2e9;
     z-index: 10000;
-    transform: translateX(2em);
+    transform: translateX(1.5em);
+    margin-top: 10px;
 }
 
 .main-menu .sub-menu {
