test desktop first grid

--- a/buoi7/css/style.css
+++ b/buoi7/css/style.css
@@ -106,8 +106,7 @@
             .grid-container .grid-item .content1 .container1 .more .comment p .number {
               background-color: black;
               color: white;
-              padding: 0 8px;
-              margin-left: 10px; }
+              padding: 0 8px; }
   .grid-container .grid-item .m {
     margin: 40px 16px; }
   .grid-container .item1 {
