--- a/Group2/css/style.css
+++ b/Group2/css/style.css
@@ -84,19 +84,50 @@ img {
   padding: 0 15px; }
 
 hr {
-  width: 78%;
+  width: 73%;
   color: #0fc567;
   background-image: linear-gradient(to right, #2cbe53, transparent); }
 
 .title {
   margin-bottom: 35px; }
 
-.laptop .img {
-  margin-bottom: 5px; }
-.laptop h4 {
-  font-size: 18px !important;
-  font-weight: 700; }
-.laptop .contentLaptop {
-  font-size: 14px !important; }
+.laptop {
+  margin-bottom: 35px !important; }
+  .laptop .img {
+    margin-bottom: 5px; }
+  .laptop h4 {
+    font-size: 18px !important;
+    font-weight: 700; }
+  .laptop .contentLaptop {
+    font-size: 14px !important; }
+  .laptop h2 {
+    font-size: 14px; }
+  .laptop ins {
+    text-decoration: none;
+    color: red;
+    font-size: 20px; }
+
+.buttonSee {
+  margin-top: 20px;
+  text-align: center; }
+  .buttonSee .button {
+    background-color: #0fc54c;
+    color: white;
+    padding: 10px 5px; }
+
+.element {
+  padding: 25px 0;
+  margin-bottom: 35px; }
+
+.info p {
+  font-size: 14px; }
+
+ul {
+  padding: 0 !important; }
+  ul li {
+    list-style: none; }
+
+.menuu li {
+  border-bottom: solid 1px rgba(168, 168, 168, 0.3); }
 
 /*# sourceMappingURL=style.css.map */
