--- a/Group2/css/style.scss
+++ b/Group2/css/style.scss
@@ -64,12 +64,12 @@ a {
 }
 
 .pa1 {
-    padding: 0!important;
+    padding: 0 !important;
     a {
         padding: .786em 1em !important;
         color: #0fc567 !important;
         font-weight: 700;
-        font-size: 14px!important;
+        font-size: 14px !important;
     }
 }
 
@@ -103,7 +103,7 @@ img {
 }
 
 hr {
-    width: 78%;
+    width: 73%;
     color: #0fc567;
     background-image: linear-gradient(to right, #2cbe53, transparent);
 }
@@ -113,6 +113,7 @@ hr {
 }
 
 .laptop {
+    margin-bottom: 35px !important;
     .img {
         margin-bottom: 5px;
     }
@@ -122,5 +123,63 @@ hr {
     }
     .contentLaptop {
         font-size: 14px !important;
+    }
+    h2 {
+        font-size: 14px;
+    }
+    ins {
+        text-decoration: none;
+        color: red;
+        font-size: 20px;
+    }
+}
+
+.buttonSee {
+    margin-top: 20px;
+    text-align: center;
+    .button {
+        background-color: #0fc54c;
+        color: white;
+        padding: 10px 5px;
+    }
+}
+
+.element {
+    padding: 25px 0;
+    margin-bottom: 35px;
+}
+
+.info {
+    p {
+        font-size: 14px;
+    }
+}
+
+// .contact-info {
+//     ul {
+//         padding: 0 !important;
+//         li {
+//             list-style: none;
+//         }
+//     }
+// }
+// li {
+//     list-style: none;
+// }
+// .sup {
+//     ul {
+//         padding: 0 !important;
+//     }
+// }
+ul {
+    padding: 0 !important;
+    li {
+        list-style: none;
+    }
+}
+
+.menuu {
+    li {
+        border-bottom: solid 1px rgba(168, 168, 168, 0.3);
     }
 }
