--- a/Group2/css/style.css
+++ b/Group2/css/style.css
@@ -59,6 +59,8 @@ a {
     color: #0fc567 !important;
     font-weight: 700;
     font-size: 14px !important; }
+  .pa1 .psub a {
+    padding: 5px 0; }
 
 .container {
   max-width: 1260px !important; }
@@ -129,5 +131,41 @@ ul {
 
 .menuu li {
   border-bottom: solid 1px rgba(168, 168, 168, 0.3); }
+
+.w-drop {
+  min-width: 60rem !important;
+  padding: 0 !important;
+  margin: 0 !important; }
+
+.psub a {
+  padding: 5px 0 !important;
+  color: black !important; }
+
+.megaMenu p {
+  font-weight: 600;
+  margin: 0 !important;
+  font-size: 14px !important; }
+.megaMenu ul li {
+  font-size: 13px !important;
+  padding: 5px 0; }
+
+.hmega {
+  padding: 20px 26px 70px 26px !important; }
+
+#navbarDropdowna:hover {
+  background-color: #0fc54c !important; }
+
+.dropdown:hover > .dropdown-menu {
+  display: block;
+  top: 100%; }
+
+.h2sub {
+  margin: 0 !important;
+  padding-left: 20px;
+  padding-right: 10px;
+  width: 130px; }
+  .h2sub ul li {
+    font-size: 13px !important;
+    padding: 5px 14px; }
 
 /*# sourceMappingURL=style.css.map */
