--- a/Group2/css/style.scss
+++ b/Group2/css/style.scss
@@ -71,6 +71,11 @@ a {
         font-weight: 700;
         font-size: 14px !important;
     }
+    .psub {
+        a {
+            padding: 5px 0;
+        }
+    }
 }
 
 .container {
@@ -181,5 +186,60 @@ ul {
 .menuu {
     li {
         border-bottom: solid 1px rgba(168, 168, 168, 0.3);
+    }
+}
+
+.w-drop {
+    min-width: 60rem !important;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+.psub {
+    a {
+        padding: 5px 0 !important;
+        color: black !important;
+    }
+}
+
+.megaMenu {
+    p {
+        font-weight: 600;
+        margin: 0 !important;
+        font-size: 14px !important;
+    }
+    ul {
+        li {
+            font-size: 13px !important;
+            padding: 5px 0;
+        }
+    }
+}
+
+.hmega {
+    padding: 20px 26px 70px 26px !important;
+}
+
+#navbarDropdown {
+    &a:hover {
+        background-color: #0fc54c !important;
+    }
+}
+
+.dropdown:hover>.dropdown-menu {
+    display: block;
+    top: 100%;
+}
+
+.h2sub {
+    margin: 0 !important;
+    padding-left: 20px;
+    padding-right: 10px;
+    width: 130px;
+    ul {
+        li {
+            font-size: 13px !important;
+            padding: 5px 14px;
+        }
     }
 }
